// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <ETGMCreateNewGroupModal /> component behaviour at mount Test renderModalBody() Snapshot test of renderModalBody() Run renderModalBody(), with all parameters intact: Check that the snapshot matches the example set by the first test run 1`] = `
<React.Fragment>
  <TBTextInput
    id="tabGroupName"
    label="Group Name"
    onChange={[Function]}
    value="Test suite specific tab group"
    warning={null}
  />
  <TBTextArea
    id="tabGroupDescription"
    label="Description (max 170 characters)"
    onChange={[Function]}
    value="A tab group preset ub a test suite. This tab group is not real and is not actually stored anywhere."
    warning={null}
  />
  <TBCheckBox
    id="tabGroupCloseAll"
    label="Close everything else before launching this tab group"
    onToggle={[Function]}
    value="false"
  />
  <TBCheckBox
    id="tabGroupCloseInactiveTabs"
    label="Automatically close all unresponsive tabs opened by this tab group"
    onToggle={[Function]}
    value="true"
  />
  <div
    className="tb-windowlist-container"
  >
    <div
      className="tb-form-row row d-flex justify-content-between"
    >
      <div
        className="col-8 label mb-0"
      >
        <span>
          Add windows or tabs to this new group
        </span>
      </div>
      <div
        className="col-4 label"
      >
        <span />
      </div>
    </div>
    <div
      className="tb-form-row row mr-1 mb-1 ml-1 mt-0"
    >
      <div
        className="col-12 mt-0"
      >
        <WindowsList
          canCloseItems={true}
          initialShowTabs={false}
          initialTabStyle="vertical"
          onAddNewTab={[Function]}
          onAddNewWindow={[Function]}
          onDeleteTab={[Function]}
          onDeleteWindow={[Function]}
          onRaiseToErrorOverlay={[Function]}
          type="new-group"
          windows={
            Array [
              Object {
                "tabs": Array [
                  Object {
                    "favIconUrl": "http://google.com/favicon.ico",
                    "title": "A test tab in a test window",
                    "url": "http://google.com",
                  },
                  Object {
                    "favIconUrl": "http://google.com/favicon.ico",
                    "title": "Another test tab in a test window",
                    "url": "http://google.com",
                  },
                ],
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;

exports[`Test <ETGMCreateNewGroupModal /> component behaviour at mount Test renderModalBody() Snapshot test of renderModalBody(), assuming information is available in this.props.data Run renderModalBody(), with all parameters intact: Check that the snapshot matches the example set by the first test run 1`] = `
<React.Fragment>
  <TBTextInput
    id="tabGroupName"
    label="Group Name"
    onChange={[Function]}
    value="Test suite specific tab group"
    warning={null}
  />
  <TBTextArea
    id="tabGroupDescription"
    label="Description (max 170 characters)"
    onChange={[Function]}
    value="A tab group preset ub a test suite. This tab group is not real and is not actually stored anywhere."
    warning={null}
  />
  <TBCheckBox
    id="tabGroupCloseAll"
    label="Close everything else before launching this tab group"
    onToggle={[Function]}
    value="false"
  />
  <TBCheckBox
    id="tabGroupCloseInactiveTabs"
    label="Automatically close all unresponsive tabs opened by this tab group"
    onToggle={[Function]}
    value="true"
  />
  <div
    className="tb-windowlist-container"
  >
    <div
      className="tb-form-row row d-flex justify-content-between"
    >
      <div
        className="col-8 label mb-0"
      >
        <span>
          Add windows or tabs to this new group
        </span>
      </div>
      <div
        className="col-4 label"
      >
        <span />
      </div>
    </div>
    <div
      className="tb-form-row row mr-1 mb-1 ml-1 mt-0"
    >
      <div
        className="col-12 mt-0"
      >
        <WindowsList
          canCloseItems={true}
          initialShowTabs={false}
          initialTabStyle="vertical"
          onAddNewTab={[Function]}
          onAddNewWindow={[Function]}
          onDeleteTab={[Function]}
          onDeleteWindow={[Function]}
          onRaiseToErrorOverlay={[Function]}
          type="new-group"
          windows={
            Array [
              Object {
                "tabs": Array [
                  Object {
                    "favIconUrl": "http://google.com/favicon.ico",
                    "title": "A test tab in a test window",
                    "url": "http://google.com",
                  },
                  Object {
                    "favIconUrl": "http://google.com/favicon.ico",
                    "title": "Another test tab in a test window",
                    "url": "http://google.com",
                  },
                ],
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;

exports[`Test <ETGMCreateNewGroupModal /> component behaviour at mount Test renderWindowsAndTabsSection(windowAndTabs, type, warning) Examine the function as a snapshot of return statement (snapshot test): Run renderWindowsAndTabsSection([], "currently-opened", ANYTHING): The returned function should match this test snapshot 1`] = `
<div
  className="tb-windowlist-container"
>
  <div
    className="tb-form-row row d-flex justify-content-between"
  >
    <div
      className="col-8 label mb-0"
    >
      <span>
        Currently opened windows and tabs
      </span>
    </div>
    <div
      className="col-4 label"
    >
      <span />
    </div>
  </div>
  <div
    className="tb-form-row row mr-1 mb-1 ml-1 mt-0"
  >
    <div
      className="col-12 mt-0"
    >
      <WindowsList
        canCloseItems={false}
        initialShowTabs={false}
        initialTabStyle="vertical"
        onAddNewTab={[Function]}
        onAddNewWindow={[Function]}
        onDeleteTab={[Function]}
        onDeleteWindow={[Function]}
        onRaiseToErrorOverlay={[Function]}
        type="currently-opened"
        windows={Array []}
      />
    </div>
  </div>
</div>
`;

exports[`Test <ETGMCreateNewGroupModal /> component behaviour at mount Test renderWindowsAndTabsSection(windowAndTabs, type, warning) Examine the function as a snapshot of return statement (snapshot test): Run renderWindowsAndTabsSection([], "existing-group", ANYTHING): The returned function should match this test snapshot 1`] = `
<div
  className="tb-windowlist-container"
>
  <div
    className="tb-form-row row d-flex justify-content-between"
  >
    <div
      className="col-8 label mb-0"
    >
      <span>
        Edit the windows and tabs in this group
      </span>
    </div>
    <div
      className="col-4 label"
    >
      <span />
    </div>
  </div>
  <div
    className="tb-form-row row mr-1 mb-1 ml-1 mt-0"
  >
    <div
      className="col-12 mt-0"
    >
      <WindowsList
        canCloseItems={true}
        initialShowTabs={false}
        initialTabStyle="vertical"
        onAddNewTab={[Function]}
        onAddNewWindow={[Function]}
        onDeleteTab={[Function]}
        onDeleteWindow={[Function]}
        onRaiseToErrorOverlay={[Function]}
        type="existing-group"
        windows={Array []}
      />
    </div>
  </div>
</div>
`;

exports[`Test <ETGMCreateNewGroupModal /> component behaviour at mount Test renderWindowsAndTabsSection(windowAndTabs, type, warning) Examine the function as a snapshot of return statement (snapshot test): Run renderWindowsAndTabsSection([], "new-group", ANYTHING): The returned function should match this test snapshot 1`] = `
<div
  className="tb-windowlist-container"
>
  <div
    className="tb-form-row row d-flex justify-content-between"
  >
    <div
      className="col-8 label mb-0"
    >
      <span>
        Add windows or tabs to this new group
      </span>
    </div>
    <div
      className="col-4 label"
    >
      <span />
    </div>
  </div>
  <div
    className="tb-form-row row mr-1 mb-1 ml-1 mt-0"
  >
    <div
      className="col-12 mt-0"
    >
      <WindowsList
        canCloseItems={true}
        initialShowTabs={false}
        initialTabStyle="vertical"
        onAddNewTab={[Function]}
        onAddNewWindow={[Function]}
        onDeleteTab={[Function]}
        onDeleteWindow={[Function]}
        onRaiseToErrorOverlay={[Function]}
        type="new-group"
        windows={Array []}
      />
    </div>
  </div>
</div>
`;
